style.css
body {
    margin: 0px;
    padding: 0px;
    color: black;
    min-height: 100vh;
    font-family: 'Roboto', sans-serif;
}

button {
    border: none;
}

.hero {
    background-color: #1f2937;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    gap: 4px;
}

.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 1vh 8vw;
}

.hero-header {
    display: flex;
    justify-content: space-between;
    margin: 1vh 8vw;
}

.hero-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 8px;
    width: 50vw;
    height:30vh;
    padding: 32px;
}

.info-item1 {
    color: #f9faf8;
    font-size: 48px;
    font-weight: 800;
    display: flex;
}

.info-item2 {
    color: #e5e7eb;
    font-size: 18px;
    display: flex;
}

.signup-button {
    display: flex;
    width: 7vw;
    border-radius: 7px;
    background-color: #3882f6;
    color: #f9faf8;
    justify-content: center;
    font-weight: 700;
    padding: 8px 4px;
}

.hero-image {
    color: black;  /*remove this color later*/
    display: flex;
    height: 30vh;
    width: 50vw;
    background-color: lightgray;
}

.hero-image-target {
    max-height: 100%;
    min-width: 100%;
    object-fit: cover;
    vertical-align: bottom;
}

.header-left-logo {
    display: flex;
}

.header-right-links {
    display: flex;
}

.logo {
    font-size: 24px;
    font-weight: 900;
    color: #F9FAF8;
  }
  
  ul {
    color: white;
    list-style-type: none;
    display: flex;
  }
  
  a {
    font-size: 18px;
    color: #e5e7eb;
    padding: 8px;
    text-decoration: none;
  }

  /* Information Section */

.info-title {
    font-size: 36px;
    font-weight: 800;
    color: #1f2937;
    margin-bottom: 32px;
    margin-top: 32px;
    text-align: center;
}

.info-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 52px;
    margin-bottom: 100px;
}

.info-card {
    max-width: 200px;
    padding: 16px;
    text-align: center;
}

/* Quote Section */

.quote-container {
    background-color: #e5e7eb;
    color: #1f2937;
    padding: 100px;
    text-align: center;
    font-size: 36px;
    font-style: italic;
}


/* Call to Action Section */

.cta-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.call-to-action {
    background-color: #3882f6;
    border-radius: 10px;
    color: #f9faf8;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    margin: 80px 100px;
    padding: 40px 20px;
    width: 70vw;
    height: 10vh;
}   

.cta-text-container {
    width: 40vw;
    margin: 0px;
    padding: 0px;
}

.cta-button-container {
    display: flex;
}

.cta-button {
    border: #f9faf8 solid;
    background-color: #3882f6;
    color: #f9faf8;
    border-radius: 7px;
    display: flex;
    width: 7vw;
    justify-content: center;
    font-weight: 700;
    padding: 8px 4px;
}

.grey-p {
    color: #e5e7eb;
}

/* Footer Section */

.footer {
    height: 72px;
    background-color: #1f2937;
    font-size: 18px;
    color: #e5e7eb;
    display: flex;
    align-items: center;
    justify-content: center;
}

